fix tests and more docs

--- a/src/components/Flex/Flex.module.scss
+++ b/src/components/Flex/Flex.module.scss
@@ -23,6 +23,9 @@
     &SpaceAround {
       justify-content: space-around;
     }
+    &Inital {
+      justify-content: initial;
+    }
   }
   &.align {
     &Start {
@@ -39,6 +42,9 @@
 
     &Stretch {
       align-items: stretch;
+    }
+    &Initial {
+      align-items: initial;
     }
   }
   &.direction {
