--- a/src/components/Table/TableHeaderCell/TableHeaderCell.module.scss
+++ b/src/components/Table/TableHeaderCell/TableHeaderCell.module.scss
@@ -3,7 +3,6 @@
   padding: 9px 8px;
   padding-inline-start: 16px;
   color: var(--secondary-text-color);
-  font: var(--font-text-small-normal);
   box-sizing: border-box;
   text-align: initial;
   border-bottom: 2px solid var(--layout-border-color);
@@ -17,9 +16,6 @@
 
   .tableHeaderCellContent {
     min-width: 0;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
 
     .text {
       display: inline-block;
@@ -29,24 +25,16 @@
     }
 
     .icon {
-      margin-inline-end: 4px;
+      margin-inline-end: var(--spacing-xs);
     }
 
     .info {
-      margin-inline-start: 4px;
-    }
-
-    .spacer {
-      flex: 1;
-      margin-inline-end: 8px;
+      margin-inline-start: var(--spacing-xs);
     }
   }
 
   .tableHeaderCellSort {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding-inline-start: 8px;
+    padding-inline-start: var(--spacing-small);
 
     .sort {
       color: var(--icon-color);
