Table - using standard sizing variables

--- a/src/components/Table/Table/Table.module.scss
+++ b/src/components/Table/Table/Table.module.scss
@@ -1,5 +1,5 @@
 .table {
-  border-radius: 4px 4px 0 0;
+  border-radius: var(--border-radius-small) var(--border-radius-small) 0 0;
   border: 1px solid var(--layout-border-color);
   display: flex;
   flex-direction: column;
