Table storybook - simplifiying overview story, adding table header functionality story

--- a/src/components/Table/TableHeaderCell/TableHeaderCell.module.scss
+++ b/src/components/Table/TableHeaderCell/TableHeaderCell.module.scss
@@ -18,18 +18,13 @@
     min-width: 0;
 
     .text {
-      display: inline-block;
-      white-space: nowrap;
-      text-overflow: ellipsis;
-      overflow: hidden;
+      &.hasInfo {
+        margin-inline-end: var(--spacing-xs);
+      }
     }
 
     .icon {
       margin-inline-end: var(--spacing-xs);
-    }
-
-    .info {
-      margin-inline-start: var(--spacing-xs);
     }
   }
 
