--- a/src/config/maps/themes/basic/keys/_keys.scss
+++ b/src/config/maps/themes/basic/keys/_keys.scss
@@ -12,6 +12,9 @@ $theme-basic-keys: (
   primary-text-color: $primary-text-color,
   text-color-on-primary: $text-color-on-primary,
   text-color-on-inverted: $text-color-on-inverted,
+  text-color-on-positive: $text-color-on-positive,
+  text-color-on-negative: $text-color-on-negative,
+  text-color-on-warning: $text-color-on-warning,
   secondary-text-color: $secondary-text-color,
   placeholder-color: $placeholder-color,
   icon-color: $icon-color,
