--- a/src/config/maps/themes/hacker/keys/_hacker-theme-keys.scss
+++ b/src/config/maps/themes/hacker/keys/_hacker-theme-keys.scss
@@ -11,6 +11,9 @@ $theme-hacker-keys: (
   primary-selected-hover-color: $theme-hacker-primary-selected-hover-color,
   primary-text-color: $theme-hacker-primary-text-color,
   text-color-on-inverted: $theme-hacker-text-color-on-inverted,
+  text-color-on-positive: $theme-hacker-text-color-on-positive,
+  text-color-on-negative: $theme-hacker-text-color-on-negative,
+  text-color-on-warning: $theme-hacker-text-color-on-warning,
   secondary-text-color: $theme-hacker-secondary-text-color,
   placeholder-color: $theme-hacker-placeholder-color,
   icon-color: $theme-hacker-icon-color,
