--- a/src/config/tokens/themes/basic/keys/_keys.scss
+++ b/src/config/tokens/themes/basic/keys/_keys.scss
@@ -18,6 +18,9 @@ $primary-text-color: $color-mud_black;
 
 $text-color-on-primary: $color-snow_white;
 $text-color-on-inverted: $color-snow_white;
+$text-color-on-positive: $color-snow_white;
+$text-color-on-negative: $color-snow_white;
+$text-color-on-warning: $color-mud_black;
 
 $secondary-text-color: $color-asphalt;
 $placeholder-color: $color-asphalt;
