Fix Var secondary type color

--- a/src/components/ProgressBars/LinearProgressBar/Bar/Bar.module.scss
+++ b/src/components/ProgressBars/LinearProgressBar/Bar/Bar.module.scss
@@ -13,7 +13,7 @@
 }
 
 .typePrimarySecondary {
-  background-color: var(--color-mud_black);
+  background-color: var(--inverted-color-background);
 }
 
 .typePrimaryPositive {
