--- a/src/components/AttentionBox/AttentionBox.module.scss
+++ b/src/components/AttentionBox/AttentionBox.module.scss
@@ -10,6 +10,11 @@
   max-width: 100%;
   height: fit-content;
   @include theme-prop(color, dark-color);
+
+  // Overriding on primary icon color should be with bigger specificity than the original color
+  & .closeIconWrapper .closeIcon {
+    color: var(--primary-text-color);
+  }
 }
 
 .title {
@@ -56,10 +61,6 @@
 
 .titleContainerIcon {
   margin-right: var(--spacing-xs);
-}
-
-.closeIcon.closeIcon {
-  color: var(--primary-text-color);
 }
 
 .closeIconWrapper {
