--- a/src/components/Table/TableHeaderCell/TableHeaderCell.module.scss
+++ b/src/components/Table/TableHeaderCell/TableHeaderCell.module.scss
@@ -27,6 +27,10 @@
       margin-inline-end: var(--spacing-xs);
       min-width: var(--spacing-medium);
     }
+
+    .infoTooltip {
+      display: inline-flex;
+    }
   }
 
   .tableHeaderCellSort {
