--- a/src/components/AttentionBox/AttentionBox.module.scss
+++ b/src/components/AttentionBox/AttentionBox.module.scss
@@ -18,7 +18,6 @@
 .title {
   margin: 0;
   font-weight: 700 !important;
-  padding: 0 var(--spacing-xs);
 }
 
 .text,
@@ -58,7 +57,7 @@
 }
 
 .titleContainerIcon {
-  margin-right: var(--spacing-xs);
+  margin-right: var(--spacing-small);
 }
 
 .closeIconWrapper {
