Dropdown menu - disable animation when using menuPortalTarget - temp fix

--- a/src/components/Dropdown/components/menu/menu.module.scss
+++ b/src/components/Dropdown/components/menu/menu.module.scss
@@ -2,6 +2,10 @@
 
 .dropdownMenuWrapper {
   animation: fadeIn var(--motion-productive-medium) var(--motion-timing-enter);
+
+  &.withoutAnimation {
+    animation: none;
+  }
 }
 
 .dropdownMenuWrapperFixedPosition {
