feat(Table): add TableContainer component to allow overflow without hurting style and overflow
this component should be used for all cases, except for specific ones where consumer want to override default behavior of overflow/have infinite table/etc.

--- a/src/components/Table/Table/Table.module.scss
+++ b/src/components/Table/Table/Table.module.scss
@@ -1,9 +1,6 @@
 .table {
-  border-radius: var(--border-radius-small) var(--border-radius-small) 0 0;
-  background-color: var(--primary-background-color);
-  border: 1px solid var(--layout-border-color);
-  display: flex;
-  flex-direction: column;
+  background-color: inherit;
+  width: 100%;
 
   [role="rowgroup"] {
     [role="row"] {
