--- a/src/components/Table/TableHeaderCell/TableHeaderCell.module.scss
+++ b/src/components/Table/TableHeaderCell/TableHeaderCell.module.scss
@@ -8,6 +8,7 @@
   height: 40px;
   display: flex;
   justify-content: space-between;
+  background-color: inherit;
 
   &:hover {
     background-color: var(--allgrey-background-color);
