--- a/src/components/Table/TableRow/TableRow.module.scss
+++ b/src/components/Table/TableRow/TableRow.module.scss
@@ -3,7 +3,7 @@
   display: grid;
   grid-template-columns: var(--table-grid-template-columns);
 
-  &:hover {
+  &:hover > * {
     background-color: var(--allgrey-background-color);
   }
 }
