--- a/src/components/Table/TableHeader/TableHeader.module.scss
+++ b/src/components/Table/TableHeader/TableHeader.module.scss
@@ -1,12 +1,12 @@
 .tableHeader {
   display: grid;
   grid-template-columns: var(--table-grid-template-columns);
+  position: sticky;
+  top: 0;
+  z-index: 1;
+  background-color: inherit;
 
-  >:first-child {
-    border-top-left-radius: 3px;
-  }
-
-  >:last-child {
-    border-top-right-radius: 3px;
+  > * {
+    background-color: inherit;
   }
 }
