--- a/src/components/Table/Table/Table.module.scss
+++ b/src/components/Table/Table/Table.module.scss
@@ -1,6 +1,10 @@
 .table {
-  background-color: inherit;
+  border-radius: var(--border-radius-small);
+  background-color: var(--primary-background-color);
+  border: 1px solid var(--layout-border-color);
+  overflow: auto;
   width: 100%;
+  height: 100%;
 
   [role="rowgroup"] {
     [role="row"] {
