--- a/src/components/Table/Table/Table.module.scss
+++ b/src/components/Table/Table/Table.module.scss
@@ -1,8 +1,10 @@
 .table {
-  border-radius: var(--border-radius-small) var(--border-radius-small) 0 0;
+  border-radius: var(--border-radius-small);
+  background-color: var(--primary-background-color);
   border: 1px solid var(--layout-border-color);
-  display: flex;
-  flex-direction: column;
+  overflow: auto;
+  width: 100%;
+  height: 100%;
 
   [role="rowgroup"] {
     [role="row"] {
