--- a/src/components/Table/TableHeaderCell/TableHeaderCell.module.scss
+++ b/src/components/Table/TableHeaderCell/TableHeaderCell.module.scss
@@ -1,5 +1,4 @@
 .tableHeaderCell {
-  background-color: var(--primary-background-color);
   padding: var(--spacing-small);
   padding-inline-start: var(--spacing-medium);
   color: var(--secondary-text-color);
@@ -9,6 +8,7 @@
   height: 40px;
   display: flex;
   justify-content: space-between;
+  background-color: inherit;
 
   &:hover {
     background-color: var(--allgrey-background-color);
@@ -17,14 +17,7 @@
   .tableHeaderCellContent {
     min-width: 0;
 
-    .text {
-      &.hasInfo {
-        margin-inline-end: var(--spacing-xs);
-      }
-    }
-
     .icon {
-      margin-inline-end: var(--spacing-xs);
       min-width: var(--spacing-medium);
     }
 
