--- a/src/components/Label/Label.module.scss
+++ b/src/components/Label/Label.module.scss
@@ -1,3 +1,4 @@
+@use "../Clickable/Clickable.module" as clickable;
 @import "../../styles/typography";
 @import "../../styles/global-css-settings";
 @import "../../styles/keyframes";
@@ -12,7 +13,7 @@
   position: relative;
 
   &.clickable {
-    cursor: pointer;
+    @include clickable.clickable;
   }
 }
 
