--- a/src/components/Table/TableRow/TableRow.module.scss
+++ b/src/components/Table/TableRow/TableRow.module.scss
@@ -1,9 +1,21 @@
+@import "../../../styles/states";
+
 .tableRow {
   height: 40px;
   display: grid;
   grid-template-columns: var(--table-grid-template-columns);
 
-  &:hover > * {
-    background-color: var(--allgrey-background-color);
+  &[aria-selected="true"] > * {
+    background-color: var(--primary-selected-color);
+  }
+
+  &:hover {
+    > * {
+      background-color: var(--allgrey-background-color);
+    }
+
+    &[aria-selected="true"] > * {
+      background-color: var(--primary-selected-hover-color);
+    }
   }
 }
