fix: clickable selector

--- a/src/components/Label/Label.module.scss
+++ b/src/components/Label/Label.module.scss
@@ -42,8 +42,8 @@
       fill: var(--primary-color);
     }
 
-    &.clickable:hover,
-    &.clickable:active {
+    .clickable:hover &,
+    .clickable:active & {
       background-color: var(--primary-hover-color);
     }
   }
@@ -63,8 +63,8 @@
       fill: var(--negative-color);
     }
 
-    &.clickable:hover,
-    &.clickable:active {
+    .clickable:hover &,
+    .clickable:active & {
       background-color: var(--negative-color-hover);
     }
   }
@@ -76,8 +76,8 @@
       fill: var(--positive-color);
     }
 
-    &.clickable:hover,
-    &.clickable:active {
+    .clickable:hover &,
+    .clickable:active & {
       background-color: var(--positive-color-hover);
     }
   }
@@ -99,8 +99,8 @@
       fill: var(--primary-color);
     }
 
-    &.clickable:hover,
-    &.clickable:active {
+    .clickable:hover &,
+    .clickable:active & {
       background-color: var(--primary-background-hover-color);
     }
   }
@@ -112,8 +112,8 @@
       fill: var(--inverted-color-background);
     }
 
-    &.clickable:hover,
-    &.clickable:active {
+    .clickable:hover &,
+    .clickable:active & {
       background-color: var(--primary-background-hover-color);
     }
   }
@@ -125,8 +125,8 @@
       fill: var(--negative-color);
     }
 
-    &.clickable:hover,
-    &.clickable:active {
+    .clickable:hover &,
+    .clickable:active & {
       background-color: var(--negative-color-selected);
     }
   }
@@ -138,8 +138,8 @@
       fill: var(--positive-color);
     }
 
-    &.clickable:hover,
-    &.clickable:active {
+    .clickable:hover &,
+    .clickable:active & {
       background-color: var(--positive-color-selected);
     }
   }
