Replace color-indigo, color-stuck-red, color-done-green in docs with other sb-colors

--- a/src/storybook/stand-alone-documentaion/welcome/principle/principle.scss
+++ b/src/storybook/stand-alone-documentaion/welcome/principle/principle.scss
@@ -2,7 +2,7 @@
 
 .monday-storybook-principle {
   &_visual-element {
-    background-color: var(--color-indigo);
+    background-color: var(--sb-color-purple);
     border-radius: var(--sb-border-radius-small);
     width: 100%;
     height: 174px;
