Replace spacing tokens with sb tokens

--- a/src/components/Box/__stories__/Box.stories.module.scss
+++ b/src/components/Box/__stories__/Box.stories.module.scss
@@ -3,8 +3,8 @@
   width: 100%;
 
   > * {
-    margin-bottom: var(--spacing-medium);
-    padding: var(--spacing-large);
+    margin-bottom: var(--sb-spacing-medium);
+    padding: var(--sb-spacing-large);
     font-family: monospace;
   }
 }
