--- a/src/components/Clickable/__stories__/clickable.stories.scss
+++ b/src/components/Clickable/__stories__/clickable.stories.scss
@@ -1,5 +1,5 @@
 @mixin clickable-element {
-  padding: var(--spacing-small);
+  padding: var(--sb-spacing-small);
   border-radius: var(--border-radius-small);
   color: var(--primary-text-color);
   width: 40%;
