--- a/src/components/Divider/__stories__/Divider.stories.module.scss
+++ b/src/components/Divider/__stories__/Divider.stories.module.scss
@@ -6,7 +6,7 @@
   }
 
   &-text {
-    margin-right: var(--spacing-large);
+    margin-right: var(--sb-spacing-large);
     align-self: center;
   }
 
