--- a/src/components/Icon/__stories__/Icon.stories.scss
+++ b/src/components/Icon/__stories__/Icon.stories.scss
@@ -34,7 +34,7 @@
 }
 
 .icon-story-description {
-  margin: var(--spacing-large) 0;
+  margin: var(--sb-spacing-large) 0;
   @include vibe-text(text1, medium);
 }
 
