--- a/src/components/Modal/__stories__/Modal.stories.module.scss
+++ b/src/components/Modal/__stories__/Modal.stories.module.scss
@@ -6,8 +6,8 @@
   }
 
   &.content {
-    margin-bottom: var(--spacing-large);
-    margin-inline: var(--spacing-large);
+    margin-bottom: var(--sb-spacing-large);
+    margin-inline: var(--sb-spacing-large);
   }
 
   &.heading {
