--- a/src/components/SplitButton/__stories__/splitButton.stories.scss
+++ b/src/components/SplitButton/__stories__/splitButton.stories.scss
@@ -25,7 +25,7 @@
     }
 
     &_icon-spacing {
-      margin-right: var(--spacing-small);
+      margin-right: var(--sb-spacing-small);
     }
   }
 
