--- a/src/components/Steps/__stories__/steps.stories.scss
+++ b/src/components/Steps/__stories__/steps.stories.scss
@@ -29,7 +29,7 @@
   }
 
   &_color {
-    padding: var(--spacing-small);
+    padding: var(--sb-spacing-small);
     background-color: var(--primary-color);
   }
 }
