--- a/src/hooks/useClickableProps/__stories__/useClickableProps.stories.scss
+++ b/src/hooks/useClickableProps/__stories__/useClickableProps.stories.scss
@@ -5,7 +5,7 @@
   cursor: pointer;
 
   background-color: var(--primary-selected-color);
-  padding: var(--spacing-small);
+  padding: var(--sb-spacing-small);
   border-radius: var(--border-radius-small);
   width: 40%;
 }
