--- a/src/components/Combobox/__stories__/combobox.stories.scss
+++ b/src/components/Combobox/__stories__/combobox.stories.scss
@@ -41,7 +41,7 @@
   align-items: center;
   border: 1px solid;
   border-radius: var(--border-radius-small);
-  padding: var(--spacing-xs);
+  padding: var(--sb-spacing-xs);
   background-color: var(--primary-selected-color);
   border-color: var(--primary-color);
   width: 97px;
