--- a/src/components/Heading/__stories__/Heading.stories.module.scss
+++ b/src/components/Heading/__stories__/Heading.stories.module.scss
@@ -1,10 +1,10 @@
 @mixin color-rectangle-example {
   width: 210px;
-  padding: var(--spacing-small);
+  padding: var(--sb-spacing-small);
 }
 
 .pageDivider {
-  margin-block: var(--spacing-medium);
+  margin-block: var(--sb-spacing-medium);
 }
 
 .primaryBackground {
@@ -23,17 +23,17 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  padding: var(--spacing-large);
+  padding: var(--sb-spacing-large);
 }
 
 .emptyStateHeading {
-  margin-block: var(--spacing-large);
+  margin-block: var(--sb-spacing-large);
 }
 
 .pageHeaderCommands {
-  margin-top: var(--spacing-large);
+  margin-top: var(--sb-spacing-large);
   & > * {
-    margin-left: var(--spacing-small);
+    margin-left: var(--sb-spacing-small);
   }
 }
 .pageHeaderSearch {
