--- a/src/components/Loader/__stories__/Loader.stories.scss
+++ b/src/components/Loader/__stories__/Loader.stories.scss
@@ -35,7 +35,7 @@
   &_dos-and-donts {
     &_heading {
       font-size: 32px !important;
-      margin-right: var(--spacing-small) !important;
+      margin-right: var(--sb-spacing-small) !important;
     }
   }
 }
