Replace border-radius tokens with sb tokens

--- a/src/components/Combobox/__stories__/combobox.stories.scss
+++ b/src/components/Combobox/__stories__/combobox.stories.scss
@@ -40,7 +40,7 @@
   justify-content: center;
   align-items: center;
   border: 1px solid;
-  border-radius: var(--border-radius-small);
+  border-radius: var(--sb-border-radius-small);
   padding: var(--sb-spacing-xs);
   background-color: var(--primary-selected-color);
   border-color: var(--primary-color);
