--- a/src/components/List/__stories__/List.stories.module.scss
+++ b/src/components/List/__stories__/List.stories.module.scss
@@ -27,7 +27,7 @@
     margin-top: var(--sb-spacing-small);
     margin-bottom: var(--sb-spacing-medium);
     border: 1px solid;
-    border-radius: var(--border-radius-small);
+    border-radius: var(--sb-border-radius-small);
     border-color: var(--placeholder-color);
     padding: var(--sb-spacing-small);
 
