--- a/src/components/ResponsiveList/__stories__/ResponsiveList.stories.scss
+++ b/src/components/ResponsiveList/__stories__/ResponsiveList.stories.scss
@@ -6,7 +6,7 @@
   justify-content: center;
   align-items: center;
   color: var(--primary-color);
-  border-radius: var(--border-radius-small);
+  border-radius: var(--sb-border-radius-small);
   padding: 2px;
   &:hover {
     background: var(--primary-background-hover-color);
