--- a/src/hooks/useClickableProps/__stories__/useClickableProps.stories.scss
+++ b/src/hooks/useClickableProps/__stories__/useClickableProps.stories.scss
@@ -6,6 +6,6 @@
 
   background-color: var(--primary-selected-color);
   padding: var(--sb-spacing-small);
-  border-radius: var(--border-radius-small);
+  border-radius: var(--sb-border-radius-small);
   width: 40%;
 }
