--- a/src/components/Clickable/__stories__/clickable.stories.scss
+++ b/src/components/Clickable/__stories__/clickable.stories.scss
@@ -1,6 +1,6 @@
 @mixin clickable-element {
   padding: var(--sb-spacing-small);
-  border-radius: var(--border-radius-small);
+  border-radius: var(--sb-border-radius-small);
   color: var(--primary-text-color);
   width: 40%;
 }
