--- a/src/components/Label/__stories__/label.stories.scss
+++ b/src/components/Label/__stories__/label.stories.scss
@@ -38,7 +38,7 @@
   }
 
   &_bad-lable {
-    border-radius: var(--border-radius-small);
+    border-radius: var(--sb-border-radius-small);
     div {
       border: none;
     }
