Replace --primary-color tokens with --sb-primary-color tokens

--- a/src/components/Button/__stories__/button.stories.scss
+++ b/src/components/Button/__stories__/button.stories.scss
@@ -4,7 +4,7 @@
   }
 
   &_on-color-button {
-    background: var(--primary-color);
+    background: var(--sb-primary-color);
     padding: 16px;
   }
 }
