--- a/src/components/Loader/__stories__/Loader.stories.scss
+++ b/src/components/Loader/__stories__/Loader.stories.scss
@@ -19,7 +19,7 @@
         }
 
         &-primary {
-          background: var(--primary-color);
+          background: var(--sb-primary-color);
         }
       }
     }
