--- a/src/components/Steps/__stories__/steps.stories.scss
+++ b/src/components/Steps/__stories__/steps.stories.scss
@@ -30,6 +30,6 @@
 
   &_color {
     padding: var(--sb-spacing-small);
-    background-color: var(--primary-color);
+    background-color: var(--sb-primary-color);
   }
 }
