--- a/src/components/Text/__stories__/Text.stories.module.scss
+++ b/src/components/Text/__stories__/Text.stories.module.scss
@@ -3,7 +3,7 @@
 }
 .primaryBackground {
   @include spacing;
-  background-color: var(--primary-color);
+  background-color: var(--sb-primary-color);
 }
 
 .invertedBackground {
