--- a/src/components/Combobox/__stories__/combobox.stories.scss
+++ b/src/components/Combobox/__stories__/combobox.stories.scss
@@ -43,7 +43,7 @@
   border-radius: var(--sb-border-radius-small);
   padding: var(--sb-spacing-xs);
   background-color: var(--sb-primary-selected-color);
-  border-color: var(--primary-color);
+  border-color: var(--sb-primary-color);
   width: 97px;
   height: 34px;
 
