--- a/src/components/ResponsiveList/__stories__/ResponsiveList.stories.scss
+++ b/src/components/ResponsiveList/__stories__/ResponsiveList.stories.scss
@@ -5,7 +5,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  color: var(--primary-color);
+  color: var(--sb-primary-color);
   border-radius: var(--sb-border-radius-small);
   padding: 2px;
   &:hover {
