Replace --secondary-text-color tokens with --sb-secondary-text-color tokens in story files

--- a/src/components/AttentionBox/__stories__/attentionBox.stories.scss
+++ b/src/components/AttentionBox/__stories__/attentionBox.stories.scss
@@ -80,7 +80,7 @@
     font-size: 14px;
 
     span {
-      color: var(--secondary-text-color);
+      color: var(--sb-secondary-text-color);
     }
   }
 
