--- a/src/components/Combobox/__stories__/combobox.stories.scss
+++ b/src/components/Combobox/__stories__/combobox.stories.scss
@@ -57,7 +57,7 @@
     font-size: 13px;
 
     span {
-      color: var(--secondary-text-color);
+      color: var(--sb-secondary-text-color);
       margin-left: 4px;
     }
   }
