--- a/src/components/Chips/__stories__/chips.stories.scss
+++ b/src/components/Chips/__stories__/chips.stories.scss
@@ -41,7 +41,7 @@
     font-size: 14px;
 
     span {
-      color: var(--secondary-text-color);
+      color: var(--sb-secondary-text-color);
     }
   }
 
