--- a/src/components/ProgressBars/LinearProgressBar/__stories__/linearProgressBar.stories.scss
+++ b/src/components/ProgressBars/LinearProgressBar/__stories__/linearProgressBar.stories.scss
@@ -59,7 +59,7 @@
     width: 410px;
     flex-direction: column;
     border: 1px solid;
-    border-color: var(--layout-border-color);
+    border-color: var(--sb-layout-border-color);
     padding: 16px;
   }
 
