--- a/src/components/Skeleton/__stories__/skeleton.stories.scss
+++ b/src/components/Skeleton/__stories__/skeleton.stories.scss
@@ -45,7 +45,7 @@
 
   &_box {
     border: 1px solid;
-    border-color: var(--ui-border-color);
+    border-color: var(--sb-ui-border-color);
   }
 
   &_header {
