Replace --primary-text-color with --sb-primary-text-color

--- a/src/components/Clickable/__stories__/clickable.stories.scss
+++ b/src/components/Clickable/__stories__/clickable.stories.scss
@@ -1,7 +1,7 @@
 @mixin clickable-element {
   padding: var(--sb-spacing-small);
   border-radius: var(--sb-border-radius-small);
-  color: var(--primary-text-color);
+  color: var(--sb-primary-text-color);
   width: 40%;
 }
 
