--- a/src/components/Icon/__stories__/Icon.stories.scss
+++ b/src/components/Icon/__stories__/Icon.stories.scss
@@ -41,7 +41,7 @@
 .icon-story-custom-icon {
   width: 20px;
   height: 16px;
-  color: var(--primary-text-color);
+  color: var(--sb-primary-text-color);
   border-radius: 4px;
 }
 
