--- a/src/components/Loader/__stories__/Loader.stories.scss
+++ b/src/components/Loader/__stories__/Loader.stories.scss
@@ -7,7 +7,7 @@
 
       &--color {
         &-black {
-          background: var(--primary-text-color);
+          background: var(--sb-primary-text-color);
         }
 
         &-negative {
