Replace --negative-color with --sb-negative-color

--- a/src/components/Loader/__stories__/Loader.stories.scss
+++ b/src/components/Loader/__stories__/Loader.stories.scss
@@ -11,11 +11,11 @@
         }
 
         &-negative {
-          background: var(--negative-color);
+          background: var(--sb-negative-color);
         }
 
         &-positive {
-          background: var(--positive-color);
+          background: var(--sb-positive-color);
         }
 
         &-primary {
