Replace --disabled-background-color with --sb-disabled-background

--- a/src/components/Box/__stories__/Box.stories.module.scss
+++ b/src/components/Box/__stories__/Box.stories.module.scss
@@ -25,7 +25,7 @@
   margin: 0;
   min-height: inherit;
   padding: 0;
-  background-color: var(--grey-background-color);
+  background-color: var(--sb-disabled-background-color);
   border-bottom: 1px solid var(--sb-inverted-color-background);
   color: var(--sb-text-color-fixed-dark);
 }
