Replace token in dropdown.stories.scss

--- a/src/components/Dropdown/__stories__/dropdown.stories.scss
+++ b/src/components/Dropdown/__stories__/dropdown.stories.scss
@@ -35,7 +35,7 @@
     font-size: 14px;
 
     span {
-      color: var(--disabled-text-color);
+      color: var(--sb-icon-color);
       margin-left: 4px;
     }
   }
