--- a/src/components/IconButton/__stories__/iconButton.stories.module.scss
+++ b/src/components/IconButton/__stories__/iconButton.stories.module.scss
@@ -11,7 +11,7 @@
     border-inline-end: 1px solid var(--sb-ui-border-color);
     width: 96px;
     height: 100%;
-    color: var(--icon-color);
+    color: var(--sb-icon-color);
   }
 
   &Title {
