Replace --grey-backround-color with sb token

--- a/src/components/IconButton/__stories__/iconButton.stories.module.scss
+++ b/src/components/IconButton/__stories__/iconButton.stories.module.scss
@@ -48,6 +48,6 @@
   &Content {
     height: 200px;
     width: 100%;
-    background-color: var(--grey-background-color);
+    background-color: var(--sb-primary-background-hover-color);
   }
 }
