--- a/src/components/GridKeyboardNavigationContext/__stories__/useGridKeyboardNavigationContext.stories.scss
+++ b/src/components/GridKeyboardNavigationContext/__stories__/useGridKeyboardNavigationContext.stories.scss
@@ -1,6 +1,4 @@
-@import "../../../styles/states";
-@import "../../../styles/typography";
-@import "../../../styles/global-css-settings";
+@import "~vibe-storybook-components/dist/mixins";
 
 .use-grid-keyboard-dummy-grid-wrapper {
   padding: 12px;
@@ -8,7 +6,7 @@
   flex-wrap: wrap;
   outline: none;
   text-align: center;
-  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1), 0 0 0 1px var(--primary-hover-color) inset;
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1), 0 0 0 1px var(--sb-primary-hover-color) inset;
 
   &.without-border {
     box-shadow: none;
@@ -20,6 +18,6 @@
   margin: 6px;
 
   &.active-item {
-    @include focus-style-css();
+    @include sb-focus-style-css();
   }
 }
