tooltip.stories.scss - color tokens fixes

--- a/src/components/Tooltip/__stories__/TooltipReference.scss
+++ b/src/components/Tooltip/__stories__/TooltipReference.scss
@@ -1,5 +1,5 @@
 .tooltip-reference-container {
-  background-color: var(--color-ui_grey);
+  background-color: var(--sb-disabled-background-color);
   width: 40px;
   height: 40px;
   border-radius: 50%;
@@ -8,10 +8,10 @@
   justify-content: center;
   transition: background-color 0.15s ease-in;
   &:hover {
-    background-color: var(--color-wolf_gray);
+    background-color: var(--sb-primary-background-hover-color);
   }
   .tooltip-reference-dot {
-    background-color: var(--color-mud_black);
+    background-color: var(--sb-inverted-color-background);
     width: 6px;
     height: 6px;
     margin: 0 2px;
