docs: component-name-decorator.scss - text color = fixed-dark

--- a/src/storybook/components/component-name/component-name-decorator.scss
+++ b/src/storybook/components/component-name/component-name-decorator.scss
@@ -1,4 +1,5 @@
 .vibe-storybook-component-name {
+  color: var(--sb-text-color-fixed-dark);
   background-image: url('./assets/component-background.png');
 
   &--foundation {
